# video-similarity-detector

./: .gitignore  LICENSE  README.md  README_EN.md  README_RECO.md  README_SET.md  app.py  requirements.txt
.github/workflows/: release.yml
desktop/: .gitignore  README.md  build-linux.sh  build-macos.sh  build-windows-gpu-fast.bat  build-windows-gpu-fast.ps1  build-windows-gpu.bat  build-windows.bat  build-windows.ps1  dev.bat  package-lock.json  package.json  requirements-runtime.txt  tsconfig.app.json  vite.config.ts
desktop/.tauri/: updater-key.private.pub
desktop/scripts/: visual-qa.mjs
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: AppLayout.tsx  CacheCleanupDialog.tsx  DesignSystem.tsx  GlassCard.tsx  GradientButton.tsx  MetricCard.tsx  RelationBadge.tsx  Sidebar.tsx  (+1 more)
scripts/: batch_compare.py  build-windows-self-extractor.ps1  build_index.py  compare_two.py  embed_video.py  extract_frames.py  finalize-updater-metadata.mjs  index_video.py  merge_videos.py  prepare-ffmpeg-runtime.ps1  prepare-ffmpeg-runtime.sh  query_index.py  scan_videos.py  set_release_version.py  test_dynamic_sampling.py  test_embedding.py  test_sampling.py
tests/: __init__.py  test_analysis_log_context.py  test_analysis_task_resume.py  test_cache_profile_paths.py  test_candidate_selector.py  test_dynamic_sampling.py  test_local_model_resolution.py  test_matcher.py  test_merge_video_filters.py  test_scanner.py  test_segmenter.py
video_sim/: __init__.py  candidate_selector.py  config.py  embedder.py  frame_sampler.py  indexer.py  matcher.py  model_locator.py  preprocess.py  reporter.py  scanner.py  segmenter.py  utils.py
(+24 files in other folders)
