[package]
name = "video-similarity-desktop"
version = "1.0.0"
description = "Video Similarity Analysis Desktop Application"
authors = ["developer"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
csv = "1"
base64 = "0.22"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls"] }
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time", "macros"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE
custom-protocol = ["tauri/custom-protocol"]
